# denctl

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
.kiro/specs/auth-login/: design.md  requirements.md  tasks.md
.kiro/specs/brew-backup/: design.md  requirements.md  tasks.md
.kiro/specs/den-cli/: design.md  requirements.md  tasks.md
.kiro/specs/keychain-storage/: design.md  requirements.md  tasks.md
.kiro/specs/plist-environment-variables/: tasks.md
openspec/changes/add-hello-again-command/: proposal.md  tasks.md
openspec/changes/add-repo-create-command/: design.md  proposal.md  tasks.md
openspec/specs/repo-management/: spec.md
src/den/: __init__.py  auth_migration.py  auth_storage.py  brew_logger.py  brew_runner.py  brewfile_formatter.py  gist_client.py  hash_utils.py  keychain_backend.py  main.py  plist_generator.py  repo_client.py  repo_config.py  state_storage.py
src/den/commands/: __init__.py  auth.py  brew.py  hello.py  homebrew.py  launchctl.py  repo.py
src/denctl/: __init__.py  main.py
src/denctl/commands/: __init__.py  auth.py  homebrew.py
tests/: __init__.py  test_auth.py  test_auth_command.py  test_auth_migration.py  test_auth_properties.py  test_auth_storage.py  test_brew_command.py  test_brew_logger.py  test_brew_runner.py  test_brewfile_formatter.py  test_gist_client.py  test_hash_utils.py  test_hello.py  test_homebrew.py  test_keychain_backend.py  test_launchctl_properties.py  test_main.py  test_properties.py  test_repo_client.py  test_repo_command.py  test_repo_config.py  test_state_storage.py
(+2 files in other folders)
