[project]
name = "denctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Butler", email = "150370099+wiscotrashpanda@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
denctl = "denctl:main"
den = "denctl:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
]
