[project]
name = "den"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Butler", email = "150370099+wiscotrashpanda@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.20.0",
    "rich>=13.0.0",
    "anthropic>=0.74.1",
]

[project.scripts]
den = "den.main:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]  # Enable Pyflakes, pycodestyle, isort, and flake8-bugbear
